tests/liquid/pos/misc/inc.js
/*@ incr :: (x:number) => {number|v = x + 1} */
function incr(x){
  return x + 1;
}
