tests/liquid/neg/simple/obj-00.js

var x /*@ { f: { number | v > 10 } } */ = { f: 1 };
 
